# Aida_GameEngine

./: CMakeLists.txt  README.md
src/: main.cpp
src/Render/: ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h
src/Resources/Shaders/: MyFragmentShader.frag  MyVertexShader.vert
src/res/: ResourcesManager.cpp  ResourcesManager.h
